--- a/templates/docker-compose_template.yml
+++ b/templates/docker-compose_template.yml
@@ -6,7 +6,7 @@ services:
     user: rstudio
     environment:
       - RENV_PATHS_CACHE=/renv
-      - INSIDE_DOCKER=true
+      - INSIDE_CONTAINER=true
     volumes:
       - $HOME/PROJECT_NAME_PLACEHOLDER:/home/rstudio/PROJECT_NAME_PLACEHOLDER
       - $HOME/renv:/renv
