--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
 version: '3'
 services:
-  rdv-template:
+  glmm-gr-pred:
     image: mattocci/cmdstan-verse-zsh:4.3.2
-    container_name: rdv-template
+    container_name: glmm-gr-pred
     user: rstudio
     environment:
       - RENV_PATHS_CACHE=/renv
       - INSIDE_CONTAINER=true
+      - INSIDE_DOCKER=true
     volumes:
-      - $HOME/rdv-template:/home/rstudio/rdv-template
+      - $HOME/glmm-gr-pred:/home/rstudio/glmm-gr-pred
       - $HOME/renv:/renv
