--- a/templates/docker-compose_template.yml
+++ b/templates/docker-compose_template.yml
@@ -7,6 +7,7 @@ services:
     environment:
       - RENV_PATHS_CACHE=/renv
       - INSIDE_CONTAINER=true
+      - INSIDE_DOCKER=true
     volumes:
       - $HOME/PROJECT_NAME_PLACEHOLDER:/home/rstudio/PROJECT_NAME_PLACEHOLDER
       - $HOME/renv:/renv
