update renv and .Rprofile

--- a/templates/docker-compose_template.yml
+++ b/templates/docker-compose_template.yml
@@ -9,5 +9,5 @@ services:
       - INSIDE_CONTAINER=true
       - INSIDE_DOCKER=true
     volumes:
-      - $HOME/PROJECT_NAME_PLACEHOLDER:/home/rstudio/PROJECT_NAME_PLACEHOLDER
+      - ./:/home/rstudio/PROJECT_NAME_PLACEHOLDER
       - $HOME/renv:/renv
