--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3'
 services:
-  glmm-gr-pred:
+  rdv-template:
     image: mattocci/cmdstan-verse-zsh:4.3.2
-    container_name: glmm-gr-pred
+    container_name: rdv-template
     user: rstudio
     environment:
       - RENV_PATHS_CACHE=/renv
       - INSIDE_CONTAINER=true
       - INSIDE_DOCKER=true
     volumes:
-      - $HOME/glmm-gr-pred:/home/rstudio/glmm-gr-pred
+      - ./:/home/rstudio/rdv-template
       - $HOME/renv:/renv
