--- a/templates/docker-compose_template.yml
+++ b/templates/docker-compose_template.yml
@@ -8,6 +8,9 @@ services:
       - RENV_PATHS_CACHE=/renv
       - INSIDE_CONTAINER=true
       - INSIDE_DOCKER=true
+      - HOST_UID=${HOST_UID}
+      - HOST_GID=${HOST_GID}
     volumes:
       - ./:/home/rstudio/PROJECT_NAME_PLACEHOLDER
       - $HOME/renv:/renv
+      - ./scripts/entrypoint.sh:/usr/local/bin/entrypoint.sh
