--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,7 +23,7 @@
 			],
 			"settings": {
 				"r.rterm.linux": "/usr/local/bin/radian",
-				"r.rpath.linux": "/usr/bin/R",
+				"r.rpath.linux": "/usr/local/bin/R",
 				"r.libPaths": [
 					"/home/rstudio/vscode-R/renv/library/R-4.3/x86_64-pc-linux-gnu",
 					"/home/rstudio/vscode-R/renv/library/R-4.3/aarch64-unknown-linux-gnu"
